--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,25 +1,22 @@
-name: AI PR Reviewer
+name: AI Code Reviewer
 
 on:
   pull_request:
-    types: [opened, synchronize]
-
+    types:
+      - opened
+      - synchronize
 permissions: write-all
-
 jobs:
-  ai-pr-reviewer:
-    runs-on: self-hosted
-    
+  review:
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
 
-      - name: code-diff-bat
-        shell: cmd
-        run: git_diff.bat
-
-      - name: upload-review-artifact
-        uses: actions/upload-artifact@v2
+      - name: AI Code Reviewer
+        uses: your-username/ai-code-reviewer@main
         with:
-          name: code-diff-bat
-          path: review_output.txt
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # The GITHUB_TOKEN is there by default so you just need to keep it like it is and not necessarily need to add it as secret as it will throw an error. [More Details](https://docs.github.com/en/actions/security-guides/automatic-token-authentication#about-the-github_token-secret)
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          OPENAI_API_MODEL: "gpt-4" # Optional: defaults to "gpt-4"
+          exclude: "**/*.json, **/*.md" # Optional: exclude patterns separated by commas
